# musiqer

./: .gitignore  CMakeLists.txt  README.md  buildCommands.sh  buildWindows.bat
src/: main.cpp  mainwindow.cpp  mainwindow.h  settingswindow.cpp  settingswindow.h  utils.cpp  utils.h
themes/: catppuccin.qss  dracula.qss  gruvbox.qss
